--- a/index.html
+++ b/index.html
@@ -145,98 +145,19 @@
 
     <section id="projetos-academicos" class="projetos">
         <h2 class="projetos-titulo">Projetos Acadêmicos</h2>
-
-        <div class="projetos-caixa">
-            <div class="projetos-card">
-                <a href="https://sergiocalazans.itch.io/cake-star" target="_blank"><img src="./img/banners/cake-star.png" alt="Jogo Cake Star" class="projetos-imagem"></a>
-                <div class="caixa-textos-projetos">
-                    <h3 class="info-projetos">Cake Star</h3>
-                    <p class="p-projetos">Jogo criado colaborativamente durante a disciplina 'Experiência Criativa:
-                    Navegando na Computação' na PUCPR.</p>
-                </div>
-            </div>
-    
-            <div class="projetos-card">
-                <a href="#" target="_blank"><img src="./img/banners/plantinha-pomposa.png" alt="Quiz Plantinha Pomposa" class="projetos-imagem"></a>
-                <div class="caixa-textos-projetos">
-                    <h3 class="info-projetos">Plantinha Pomposa</h3>
-                    <p class="p-projetos">Quiz interativo criado colaborativamente durante a disciplina 'Experiência
-                    Criativa: Navegando na Computação' na PUCPR, utilizando a IDE Processing com a linguagem de programação Java.
-                    </p>
-                </div>
-            </div>
-            <div class="projetos-card">
-                <a href="https://colab.research.google.com/drive/1e6qbv8HuAwkhRBu8WUOqOkJ1oQoN7Qg6" target="_blank"><img src="./img/banners/jogo-tabela-verdade.png" alt="Quiz Plantinha Pomposa" class="projetos-imagem"></a>
-                <div class="caixa-textos-projetos">
-                    <h3 class="info-projetos">Jogo Tabela Verdade</h3>
-                    <p class="p-projetos">Quiz criado em Python que desafia os conhecimentos do jogador sobre tabela verdade. 
-                        Projeto feito na disciplina de 'Resolução de Problemas com Lógica Matemática' na PUCPR.
-                    </p>
-                </div>
-            </div>
-        </div>
-
+        <div class="projetos-caixa"></div>
     </section>
 
     <section id="projetos-pessoais" class="projetos">
         <h2 class="projetos-titulo">Projetos Pessoais</h2>
-
-        <div class="projetos-caixa">
-            <div class="projetos-card">
-                <a href="https://conversor-de-moedas-america-latina.vercel.app/" target="_blank"><img src="./img/banners/conversor-de-moedas.png" alt="Conversor de Moedas" class="projetos-imagem"></a>
-                <div class="caixa-textos-projetos">
-                    <h3 class="info-projetos">Conversor de Moeda América Latina</h3>
-                    <p class="p-projetos">Site de conversor de moedas do Real para uma moeda de um páis latino-americano.</p>
-                </div>
-            </div>
-            <div class="projetos-card">
-                <a href="https://spotify-lake-theta.vercel.app/" target="_blank"><img src="./img/banners/spotify.png" alt="Conversor de Moedas" class="projetos-imagem"></a>
-                <div class="caixa-textos-projetos">
-                    <h3 class="info-projetos">Spotify</h3>
-                    <p class="p-projetos">Projeto de uma réplica do Front-end da plataforma de streaming de música Spotify.</p>
-                </div>
-            </div>
-            <div class="projetos-card">
-                <a href="https://react-app-vercel-eight.vercel.app/" target="_blank"><img src="./img/banners/react-app.png" alt="Conversor de Moedas" class="projetos-imagem"></a>
-                <div class="caixa-textos-projetos">
-                    <h3 class="info-projetos">React App</h3>
-                    <p class="p-projetos">Site para criar cards dos colaboradores de sua equipe ou empresa. O Projeto utiliza o framework React.</p>
-                </div>
-            </div>
-        </div>
-
+        <div class="projetos-caixa"></div>
     </section>
 
     <section id="projetos-profissionais" class="projetos">
         <h2 class="projetos-titulo">Projetos Profissionais</h2>
-
-        <div class="projetos-caixa">
-            <div class="projetos-card">
-                <a href="https://ifpr.edu.br/manuais/base-conhecimento/manual/" target="_blank"><img src="./img/banners/manual-progepe.png"
-                        alt="Manual PROGEPE" class="projetos-imagem"></a>
-                <div class="caixa-textos-projetos">
-                    <h3 class="info-projetos">Manual PROGEPE</h3>
-                    <p class="p-projetos">Site do manual utilizado pela Pró-reitoria de Gestão de Pessoas do IFPR, que
-                    ajudei a desenvolver utilizando o WordPress.</p>
-                </div>
-            </div>
-            
-        </div>
+        <div class="projetos-caixa"></div>
     </section>
 
-    <section id="contato" class="contato">
-        <h2 class="contato-titulo">Entre em Contato</h2>
-        <form class="formulario-contato" id="formulario" onsubmit="enviarMsg(event)">
-            <div class="grupo-form">
-                <input class="campo-form" placeholder="Nome" id="nome">
-            </div>
-            <div class="grupo-form">
-                <textarea class="campo-form" placeholder="Digite sua mensagem" rows="4" id="mensagem"></textarea>
-            </div>
-
-            <button type="submit" class="botao-form">Enviar WhatsApp</button>
-        </form>
-    </section>
 
     <script src="script.js"></script>
 </body>
