Update index.html, script.js, styles.css

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 
     <div class="efeitos-fundo"></div>
 
-    <nav class="navegacao">
-        <ul class="menu">
+    <nav class="navegacao" id="navegacao">
+        <a href="#inicio" class="nav-logo">Portfólio</a>
+        <ul class="menu" id="menu">
             <li>
                 <a href="#inicio" class="menu-link">Início</a>
             </li>
@@ -31,10 +32,14 @@
                 <a href="#contato" class="menu-link">Contato</a>
             </li>
         </ul>
+        <button id="btn-mobile" aria-label="Abrir Menu" aria-haspopup="true" aria-controls="menu" aria-expanded="false">
+            <span class="hamburguer"></span>
+        </button>
     </nav>
 
     <main id="inicio" class="cabecalho">
-        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img src="https://avatars.githubusercontent.com/u/88505877?v=4" alt="Foto de perfil" class="foto-perfil"></a>
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img
+                src="https://avatars.githubusercontent.com/u/88505877?v=4" alt="Foto de perfil" class="foto-perfil"></a>
         <h1>Sérgio Calazans</h1>
         <p class="cabecalho-sub-titulo">Estudante de Ciência da Computação e Programador</p>
         <div class="icons fade-in delay-2">
@@ -117,7 +122,7 @@
                 <div class="caixa-textos-projetos">
                     <h3 class="info-projetos">Acadêmicos</h3>
                     <p class="p-projetos">Trabalhos feitos durante a faculdade,
-                    que utilizam tecnologias ou teorias ensinadas nas disciplinas.</p>
+                        que utilizam tecnologias ou teorias ensinadas nas disciplinas.</p>
                 </div>
             </div>
 
@@ -127,7 +132,7 @@
                 <div class="caixa-textos-projetos">
                     <h3 class="info-projetos">Pessoais</h3>
                     <p class="p-projetos">Projetos criados por mim desde 2021 para melhorar as minhas habilidades de
-                    programação.</p>
+                        programação.</p>
                 </div>
             </div>
 
