Create Paste css

--- a/index.html
+++ b/index.html
@@ -117,32 +117,35 @@
 
         <div class="projetos-caixa">
             <div class="projetos-card">
-                <a href="#projetos-academicos"><img src="./img/banners/academico.jpg" alt="Projetos Acadêmicos"
-                        class="projetos-imagem"></a>
-                <div class="caixa-textos-projetos">
-                    <h3 class="info-projetos">Acadêmicos</h3>
-                    <p class="p-projetos">Trabalhos feitos durante a faculdade,
-                        que utilizam tecnologias ou teorias ensinadas nas disciplinas.</p>
-                </div>
+                <a href="#projetos-academicos" class="link-categoria"><img src="./img/banners/academico.jpg" alt="Projetos Acadêmicos"
+                        class="projetos-imagem">
+                    <div class="caixa-textos-projetos">
+                        <h3 class="info-projetos">Acadêmicos</h3>
+                        <p class="p-projetos">Trabalhos feitos durante a faculdade,
+                            que utilizam tecnologias ou teorias ensinadas nas disciplinas.</p>
+                    </div>
+                </a>
             </div>
 
             <div class="projetos-card">
-                <a href="#projetos-pessoais"><img src="./img/banners/pessoais.jpg" alt="Projetos Pessoais"
-                        class="projetos-imagem"></a>
-                <div class="caixa-textos-projetos">
-                    <h3 class="info-projetos">Pessoais</h3>
-                    <p class="p-projetos">Projetos criados por mim desde 2021 para melhorar as minhas habilidades de
-                        programação.</p>
-                </div>
+                <a href="#projetos-pessoais" class="link-categoria">
+                    <img src="./img/banners/pessoais.jpg" alt="Projetos Pessoais" class="projetos-imagem">
+                    <div class="caixa-textos-projetos">
+                        <h3 class="info-projetos">Pessoais</h3>
+                        <p class="p-projetos">Projetos criados por mim desde 2021 para melhorar as minhas habilidades de
+                            programação.</p>
+                    </div>
+                </a>
             </div>
 
             <div class="projetos-card">
-                <a href="#projetos-profissionais"><img src="./img/banners/profissional.jpg" alt="Projetos Profissionais"
-                        class="projetos-imagem"></a>
-                <div class="caixa-textos-projetos">
-                    <h3 class="info-projetos">Profissionais</h3>
-                    <p class="p-projetos">Projetos criados durante estágios e trabalhos que realizei.</p>
-                </div>
+                <a href="#projetos-profissionais" class="link-categoria">
+                    <img src="./img/banners/profissional.jpg" alt="Projetos Profissionais" class="projetos-imagem">
+                    <div class="caixa-textos-projetos">
+                        <h3 class="info-projetos">Profissionais</h3>
+                        <p class="p-projetos">Projetos criados durante estágios e trabalhos que realizei.</p>
+                    </div>
+                </a>
             </div>
         </div>
     </section>
