--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <main id="inicio" class="cabecalho">
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img
-                src="https://avatars.githubusercontent.com/u/88505877?v=4" alt="Foto de perfil" class="foto-perfil"></a>
+                src="" alt="Foto de perfil" class="foto-perfil"></a>
         <h1>Sérgio Calazans</h1>
         <p class="cabecalho-sub-titulo">Estudante de Ciência da Computação e Programador</p>
         <div class="icons fade-in delay-2">
