--- a/index.html
+++ b/index.html
@@ -109,6 +109,42 @@
                 </div>
                 <p class="sobre-texto">WordPress</p>
             </div>
+            <div class="tecnologia-caixa">
+                <div class="icons fade-in delay-2">
+                    <img src="./img/icons/NumPy.png" alt="WordPress">
+                </div>
+                <p class="sobre-texto">NumPy</p>
+            </div>
+            <div class="tecnologia-caixa">
+                <div class="icons fade-in delay-2">
+                    <img src="./img/icons/Pandas.png" alt="WordPress">
+                </div>
+                <p class="sobre-texto">Pandas Python</p>
+            </div>
+            <div class="tecnologia-caixa">
+                <div class="icons fade-in delay-2">
+                    <img src="./img/icons/Processing.png" alt="WordPress">
+                </div>
+                <p class="sobre-texto">Processing</p>
+            </div>
+            <div class="tecnologia-caixa">
+                <div class="icons fade-in delay-2">
+                    <img src="./img/icons/JSON.png" alt="WordPress">
+                </div>
+                <p class="sobre-texto">JSON</p>
+            </div>
+            <div class="tecnologia-caixa">
+                <div class="icons fade-in delay-2">
+                    <img src="./img/icons/gemini.png" alt="WordPress">
+                </div>
+                <p class="sobre-texto">Google Gemini</p>
+            </div>
+            <div class="tecnologia-caixa">
+                <div class="icons fade-in delay-2">
+                    <img src="./img/icons/VS Code.png" alt="WordPress">
+                </div>
+                <p class="sobre-texto">VS Code</p>
+            </div>
         </div>
     </section>
 
