--- a/index.html
+++ b/index.html
@@ -123,6 +123,12 @@
             </div>
             <div class="tecnologia-caixa">
                 <div class="icons fade-in delay-2">
+                    <img src="./img/icons/micro-python.png" alt="WordPress">
+                </div>
+                <p class="sobre-texto">MicroPython</p>
+            </div>
+            <div class="tecnologia-caixa">
+                <div class="icons fade-in delay-2">
                     <img src="./img/icons/Processing.png" alt="WordPress">
                 </div>
                 <p class="sobre-texto">Processing</p>
