Create icon Excel

--- a/index.html
+++ b/index.html
@@ -111,45 +111,45 @@
             </div>
             <div class="tecnologia-caixa">
                 <div class="icons fade-in delay-2">
-                    <img src="./img/icons/NumPy.png" alt="WordPress">
+                    <img src="./img/icons/NumPy.png" alt="NumPy">
                 </div>
                 <p class="sobre-texto">NumPy</p>
             </div>
             <div class="tecnologia-caixa">
                 <div class="icons fade-in delay-2">
-                    <img src="./img/icons/Pandas.png" alt="WordPress">
+                    <img src="./img/icons/Pandas.png" alt="Pandas Python">
                 </div>
                 <p class="sobre-texto">Pandas Python</p>
             </div>
             <div class="tecnologia-caixa">
                 <div class="icons fade-in delay-2">
-                    <img src="./img/icons/micro-python.png" alt="WordPress">
+                    <img src="./img/icons/micro-python.png" alt="MicroPython">
                 </div>
                 <p class="sobre-texto">MicroPython</p>
             </div>
             <div class="tecnologia-caixa">
                 <div class="icons fade-in delay-2">
-                    <img src="./img/icons/Processing.png" alt="WordPress">
+                    <img src="./img/icons/Processing.png" alt="Processing">
                 </div>
                 <p class="sobre-texto">Processing</p>
             </div>
             <div class="tecnologia-caixa">
                 <div class="icons fade-in delay-2">
-                    <img src="./img/icons/JSON.png" alt="WordPress">
+                    <img src="./img/icons/JSON.png" alt="JSON">
                 </div>
                 <p class="sobre-texto">JSON</p>
             </div>
             <div class="tecnologia-caixa">
                 <div class="icons fade-in delay-2">
-                    <img src="./img/icons/gemini.png" alt="WordPress">
+                    <img src="./img/icons/gemini.png" alt="Gemini">
                 </div>
                 <p class="sobre-texto">Google Gemini</p>
             </div>
             <div class="tecnologia-caixa">
                 <div class="icons fade-in delay-2">
-                    <img src="./img/icons/VS Code.png" alt="WordPress">
+                    <img src="./img/icons/excel.png" alt="Excel">
                 </div>
-                <p class="sobre-texto">VS Code</p>
+                <p class="sobre-texto">Excel</p>
             </div>
         </div>
     </section>
