Update link Linkedin

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <a href="https://github.com/sergiocalazans" target="_blank">
                 <img src="./img/icons/github.png" alt="GitHub">
             </a>
-            <a href="https://www.linkedin.com/in/s%C3%A9rgio-calazans-627796290/" target="_blank">
+            <a href="https://www.linkedin.com/in/sergiocalazans/" target="_blank">
                 <img src="./img/icons/linkedin.png" alt="LinkedIn">
             </a>
         </div>
