--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
         <h2 class="sobre-titulo">Sobre Mim</h2>
         <div class="sobre-caixa">
             <p class="sobre-texto">
-                Olá! Meu nome é Sérgio Calazans, tenho 18 anos e sou apaixonado por tecnologia e programação,
-                o que me levou a ingressar no curso de Ciência da Computação na PUCPR, no período da manhã.
-                Meu objetivo é aprofundar meus conhecimentos em desenvolvimento de software e inteligência artificial,
+                Olá! Meu nome é Sérgio Calazans, tenho 18 anos e sou apaixonado por tecnologia e programação.
+                Sou estudante do curso de Bacharelado em Ciência da Computação na PUCPR, no período da manhã.
+                Meu objetivo é aprofundar meus conhecimentos em desenvolvimento web, inteligência artificial e ciência de dados,
                 buscando sempre novas oportunidades para aplicar minhas habilidades na área.
             </p>
         </div>
